<resources>
    <string name="app_name">Partem</string>
    <string name="action_settings">Settings</string>
    <string name="submit_button_text">Submit</string>
    <string name="test_string">This is the notification string</string>
    <string name="content_desc">Paceholder text</string>
    <string name="autofill_hints"></string>

    <!-- Notification channel names -->
    <string name="group_invitation_notification_channel">Group invitations</string>
    <string name="group_joined_notification_channel">New group members</string>
    <string name="group_left_notification_channel">User left group</string>
    <string name="expenses_deadline_notification_channel">Upcoming charge</string>
    <string name="expenses_notification_channel">Paid charges</string>
    <string name="payments_notification_channel">Funds received</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- Strings used for login fragment -->
    <string name="login_fragment_welcome_title">Welcome!</string>
    <string name="login_fragment_welcome_info">Your funds will load immediately after signing in. If you do not have an account with us, use the button below and sign up!</string>
    <string name="login_fragment_email_input_hint">Email*</string>
    <string name="login_fragment_password_input_hint">Password*</string>
    <string name="login_fragment_sign_in">Sign in</string>
    <string name="login_fragment_sign_up">Sign up!</string>
    <string name="login_fragment_button_join_text">or</string>
    <string name="login_fragment_policy">By proceeding, you also agree to the <a href="https://ourapp.live/tos">Terms of Service</a> and <a href="https://ourapp.live/pp">Privacy Policy.</a></string>
    <string name="login_fragment_remember">Remember me</string>
    <string name="login_fragment_logout">You have now signed out!</string>

    <!-- Strings used for register fragment -->
    <string name="register_confirm_password_edittext_hint">Confirm password</string>
    <string name="register_username_edittext_hint">Enter your username</string>
    <string name="register_password_edittext_hint">Enter your password</string>
    <string name="register_email_edittext_hint">Enter your email</string>
    <string name="register_dob_edittext_hint">Enter your birthday</string>
    <string name="register_register_button">Register</string>
    <string name="register_screen_username_autofill">Username</string>
    <string name="register_screen_password_autofill">Password</string>
    <string name="register_screen_email_autofill">email</string>
    <string name="register_screen_agreement_text">By tapping submit you agree to our <a href="https://ourapp.live/tos">terms of service</a> and that you are over 18 years of age.</string>

    <!-- Strings used for home fragment -->
    <string name="home_fragment_add_group_text">Add Group</string>
    <string name="home_fragment_temp_string">Money Amount\nHere</string>

    <!-- String used for test group fragment -->
    <string name="test_group_fragment_instructions">Enter a user here</string>
    <string name="test_group_fragment_target_user_edit_text_hint">Enter a user by username</string>
    <string name="test_group_fragment_group_name_edit_text_hint">Enter your group name</string>
    <string name="test_group_fragment_submit_button_text">Submit</string>

    <!-- strings used in test charging fragment -->
    <string name="test_charging_fragment_title">Enter a group charge here</string>
    <string name="test_charging_fragment_group_target_hint">Which group are you charging?</string>
    <string name="test_charging_fragment_group_amount_hint">How much are you charging?</string>

    <!-- strings used in test paying fragment -->
    <string name="test_paying_fragment_title">Make payments to groups here</string>
    <string name="test_paying_fragment_group_target_hint">Which group are you paying?</string>
    <string name="test_paying_fragment_group_amount_hint">How much are you sending?</string>

    <!-- strings used for settings fragment -->
    <string name="settings_fragment_account">Account</string>
    <string name="settings_fragment_notifications">Notifications</string>
    <string name="settings_fragment_payment_methods">Payment Methods</string>
    <string name="settings_fragment_profile">Profile</string>
    <string name="settings_fragment_security">Security</string>
    <string name="settings_fragment_contact_us">Contact Us</string>
    <string name="settings_fragment_sign_out">Sign Out</string>

    <!-- strings used in profile fragment -->
    <string name="profile_fragment_username">Username: %1$s</string>
    <string name="profile_fragment_groups">Groups: %1$d</string>

</resources>
