<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="viewmodel" type="com.example.sharedexpenseapp.RegisterViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RegisterFragment">

        <TextView
            android:id="@+id/register_fragment_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/register_fragment_title_text_size"
            android:layout_marginTop="@dimen/register_fragment_title_margin_top"
            android:text="@string/register_fragment_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/register_screen_username_edittext"
            style="@style/AppTheme.EditText"
            android:layout_width="@dimen/register_fragment_edittext_width"
            android:layout_height="@dimen/register_fragment_edittext_height"
            android:hint="@string/register_username_edittext_hint"
            android:inputType="text"
            android:text="@={viewmodel.newUserUsername$app_debug}"
            android:layout_marginTop="@dimen/register_fragment_username_edittext_margin_top"
            android:autofillHints="@string/register_screen_username_autofill"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_fragment_title" />

        <EditText
            android:id="@+id/register_screen_password_edittext"
            style="@style/AppTheme.EditText"
            android:layout_width="@dimen/register_fragment_edittext_width"
            android:layout_height="@dimen/register_fragment_edittext_height"
            android:hint="@string/register_password_edittext_hint"
            android:inputType="textPassword"
            android:text="@={viewmodel.newUserPassword$app_debug}"
            android:layout_marginTop="@dimen/register_fragment_password_edittext_margin_top"
            android:autofillHints="register_screen_password_autofill"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_screen_username_edittext" />

        <EditText
            android:id="@+id/register_screen_email_edittext"
            style="@style/AppTheme.EditText"
            android:layout_width="@dimen/register_fragment_edittext_width"
            android:layout_height="@dimen/register_fragment_edittext_height"
            android:hint="@string/register_email_edittext_hint"
            android:inputType="textEmailAddress"
            android:text="@={viewmodel.newUserEmail$app_debug}"
            android:layout_marginTop="@dimen/register_fragment_password_edittext_margin_top"
            android:autofillHints="@string/register_screen_email_autofill"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_screen_password_edittext" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/register_fragment_register_button"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/register_register_button"
            app:cornerRadius="@dimen/button_corners"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_screen_email_edittext" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>